# Team04_DrivaPi

./: .codeqlignore  .dotstop.dot  .gitattributes  .gitignore  .gitignore_traceability_test  CMakeLists.txt  README.md  cppcheck_includes.txt  pyproject.toml  reorganize.sh  trudag_run.json
.dotstop_extensions/: __init__.py  validators.py
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: epic_template.md  issue_template.md  sub_issue_template.md
.github/workflows/: firmware-qa.yml  firmware_static.yml  generate_verification_artifacts.yml  reqs-checks.yml  stm32_ci.yml  tests.yml  tsf_validation.yml  unit_tests.yml
.venv_311/: pyvenv.cfg
Threadx/: .cproject  .mxproject  Threadx Debug.launch  Threadx.ioc  main.c  main.h
Threadx/Debug/: Threadx.elf  Threadx.list  Threadx.map  makefile  objects.list  sources.mk
archive/genAI lab/: GenAI_lab.md
artifacts/: README.md  traceability-manifest.json  traceability-matrix-lltc.csv  traceability-matrix-srd.csv  traceability-matrix-swd.csv  traceability-matrix.csv  traceability-report.md  traceability.txt
artifacts/reports/: TSF_COMPLIANCE_REPORT.md  reqs_missing_fields.csv  reqs_missing_fields_issues.csv
artifacts/traceability/: gap-report.csv  manifest.json  matrix-backward.csv  matrix-forward.csv  traceability-matrix-swd.csv  traceability-matrix-urd.csv
artifacts/trustable-report/: LLTC.md  SRD.md  SWD.md  URD.md  dashboard.md  trustable_report_for_Software.md
config/: traceability_patterns.json
config/vss/: drivapi.vss.json
docker/trudag/: Dockerfile  install_trustable.sh
docs/: README.md
docs/CI/: embededSystems.md  embededSystems.txt  qemu_guide.md
docs/archive/: REQS_WORKFLOW.md  REQ_REVIEW_CHECKLIST.md  TSF-quick-reference.md
docs/data_transfer/: can.md  kuksa_and_vss_spike.md  usb_dongle.md
docs/diagrams/: can.mmd
docs/genAI/: copilot_automation_workflow.md
docs/github/: issue_template.md  pull_request_template.md
docs/hardware/: hardware_assembly.md  power_consumption.md  power_consuption.md  sum_up_sprint1.md
docs/implementation/: Artifact-Linking-Guide.md  Review-Approval-Workflow.md  TSF-Completion-Plan.md  TSF-Team-Assessment.md
docs/ops/: trudag-official.md
docs/tsf/: start.md  (+16 more)
dotstop_extensions/: validators.py
genAI/: genAI_justification.md
qt/: .gitignore  PROJECT_STRUCTURE.md  README.md  quick-start.sh  seame-hmi.pro
qt_app/: CMakeLists.txt  compile.sh  cross_compile_agl.sh
qt_app/include/: can.hpp  canreader.hpp  kuksareader.hpp  vehicledata.h  vehicledata.hpp
qt_app/myqtapp-build/: CMakeCache.txt  cmake_install.cmake
qt_app/myqtapp-build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
qt_app/myqtapp-build/myqtapp_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
qt_app/myqtapp-build/myqtapp_autogen/6YEA5652QU/: moc_vehicledata.cpp.d
qt_app/resources/: qml.qrc  resources.qrc
qt_app/resources/qml/: main.qml
qt_app/resources/qml/components/: SimulationControls.qml  SpeedDisplay.qml
qt_app/src/: can.cpp  canreader.cpp  kuksareader.cpp  main.cpp  original_main.cpp  vehicledata.cpp
reports/: REQS_REMEDIATION.md  tsf_confidence_assessment.json
reqs/: Dockerfile  Makefile  README.md  doorstop-entrypoint.sh
scripts/: README.md  REQS_LINTER_README.md  apply_trudag_shims.py  baseline_reqs.py  create_requirements_hierarchy.py  export_artifact.py  generate_missing_fields_csv.py  get_latest_traceability_manifest.sh  reqs_lint.py  run_trudag_docker.sh  traceability_check.py  trudag-helper.sh  tsf_confidence_assessment.py
speed/: .cproject  .mxproject  .project  speed Debug.launch  speed.ioc
src/: CMakeLists.txt
src/sensors/: gpio_driver.h  gpio_interface.h  motor_speed.cpp  motor_speed.h
tests/: CMakeLists.txt
tests/host/: test_placeholder.c
tests/unit/: run_all_tests.sh  test_motor_speed.cpp
tests/unit/coverage/: coverage_combined.info  coverage_filtered.info
tests/unit/coverage/html/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
tests/unit/coverage/html/home/sheila/Desktop/drivapi/tests/unit/speed_sensor/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  speed_sensor.c.func-sort-c.html  speed_sensor.c.func.html  speed_sensor.c.gcov.html
tests/unit/coverage/html/src/: dc_motor_functions.c.func-sort-c.html  dc_motor_functions.c.func.html  dc_motor_functions.c.gcov.html  dc_motor_testable.c.func-sort-c.html  dc_motor_testable.c.func.html  dc_motor_testable.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  pca9685_testable.c.func-sort-c.html  pca9685_testable.c.func.html  pca9685_testable.c.gcov.html  servo_functions.c.func-sort-c.html  servo_functions.c.func.html  servo_functions.c.gcov.html  servo_motor_testable.c.func-sort-c.html  servo_motor_testable.c.func.html  servo_motor_testable.c.gcov.html  speed_sensor_functions.c.func-sort-c.html  speed_sensor_functions.c.func.html  speed_sensor_functions.c.gcov.html
tests/unit/motor_servo/: project.yml
tests/unit/motor_servo/scripts/: run_tests.sh
tests/unit/motor_servo/src/: dc_motor_testable.c  servo_motor_testable.c  servo_motor_testable.h
tests/unit/motor_servo/test/: test_dc_motor_functions.c  test_servo_functions.c  test_speed_sensor_functions.c  test_threadx_dc_motor_with_mocks.c  test_threadx_servo_motor_with_mocks.c
tests/unit/motor_servo/test_reports/: coverage-sonar.xml
tests/unit/speed_sensor/: README.md  project.yml  run_speedtest.sh
tests/unit/speed_sensor/coverage_report/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
tests/unit/speed_sensor/coverage_report/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  speed_sensor.c.func-sort-c.html  speed_sensor.c.func.html  speed_sensor.c.gcov.html
tests/unit/speed_sensor/coverage_report/test/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  test_speed_sensor.c.func-sort-c.html  test_speed_sensor.c.func.html  test_speed_sensor.c.gcov.html
tests/unit/speed_sensor/src/: speed_sensor.c
tests/unit/unit_tests/test/: test_speed_sensor.c
(+344 files in other folders)
